--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,13 @@ jobs:
       - name: Generate protobuf files
         run: buf generate
 
+      - name: Verify protobuf files generated
+        run: |
+          echo "Checking generated protobuf files..."
+          ls -la gen/go/proto/
+          echo "Content of generated Go file:"
+          head -20 gen/go/proto/climate_point.pb.go || echo "File not found"
+
       - name: Download dependencies
         run: go mod download
 
@@ -107,6 +114,13 @@ jobs:
 
       - name: Generate protobuf files
         run: buf generate
+
+      - name: Verify protobuf files generated for Rust
+        run: |
+          echo "Checking generated protobuf files..."
+          ls -la gen/go/proto/
+          echo "Content of generated Go file:"
+          head -20 gen/go/proto/climate_point.pb.go || echo "File not found"
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
