--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  go-checks:
-    name: Go Checks
+  setup:
+    name: Setup
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -38,6 +38,33 @@ jobs:
         run: |
           echo "Verifying protobuf files were generated..."
           ls -la gen/go/proto/v1/
+
+      - name: Upload generated protobuf files
+        uses: actions/upload-artifact@v4
+        with:
+          name: generated-protobuf
+          path: gen/
+          retention-days: 1
+
+  go-checks:
+    name: Go Checks
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.24"
+          cache: true
+
+      - name: Download generated protobuf files
+        uses: actions/download-artifact@v4
+        with:
+          name: generated-protobuf
+          path: gen/
 
       - name: Download dependencies
         run: go mod download
@@ -82,6 +109,7 @@ jobs:
   rust-checks:
     name: Rust Checks
     runs-on: ubuntu-latest
+    needs: setup
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -96,27 +124,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y protobuf-compiler
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
+      - name: Download generated protobuf files
+        uses: actions/download-artifact@v4
         with:
-          go-version: "1.24"
-          cache: true
-
-      - name: Set up Buf
-        uses: bufbuild/buf-setup-action@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Install protoc-gen-go
-        run: go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-
-      - name: Generate protobuf files
-        run: buf generate
-
-      - name: Verify protobuf files generated for Rust
-        run: |
-          echo "Verifying protobuf files were generated..."
-          ls -la gen/go/proto/v1/
+          name: generated-protobuf
+          path: gen/
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
@@ -148,6 +160,7 @@ jobs:
   protobuf-checks:
     name: Protobuf Checks
     runs-on: ubuntu-latest
+    needs: setup
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -157,6 +170,12 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Download generated protobuf files
+        uses: actions/download-artifact@v4
+        with:
+          name: generated-protobuf
+          path: gen/
+
       - name: Lint protobuf files
         run: buf lint
 
@@ -165,9 +184,6 @@ jobs:
         if: github.event_name == 'pull_request'
         with:
           against: "https://github.com/${{ github.repository }}.git#branch=${{ github.base_ref }}"
-
-      - name: Generate protobuf files
-        run: buf generate
 
       - name: Check if generated files are up to date
         run: |
