--- a/cmd/processor/Cargo.toml
+++ b/cmd/processor/Cargo.toml
@@ -15,7 +15,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 prost = "0.12"
 prost-types = "0.12"
-influxdb = "0.7"
+influxdb2 = "0.5"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt"] }
 anyhow = "1.0"
